# MayIsBikeMonth.github.io

./: .editorconfig  .env.example  .gitignore  LICENSE  Procfile.dev  README.markdown  Strava API v3.postman_collection.json  conf.py  data-2023.json  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: main.yml
assets/: data-2023.json  leaderboard.css  leaderboard.js
assets/css/: app.css
assets/js/: leaderboard.js
built/: leaderboard.js  render_leaderboard.js  strava_integration.js
leaderboard_generator/: strava_requester.py
src/: d.ts  leaderboard.js  leaderboard.ts  render_leaderboard.ts  strava_integration.ts
tests/: strava_integration.test.ts  test_strava_requester.py
