[tool.poetry]
name = "mayisbikemonth"
version = "0.1.0"
description = "May is Bike Month!"
authors = ["Seth Herr"]
readme = "README.markdown"

[tool.poetry.dependencies]
python = "^3.11"
nikola = "^8.2.4"
aiohttp = "^3.8.4"
watchdog = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
